feat: Topic 엔티티 도입 및 도메인 모델 개선 (Day 4)
- GithubRepository.topics를 @ElementCollection에서 @ManyToMany(Topic)으로 전환
- Issue, RepoEmbedding, Topic, TrendScore 엔티티 추가
- 각 엔티티별 JPA Repository 추가
- 컨트롤러 응답을 ApiResponse<T> 래퍼로 통일
- 서비스 레이어 EntityNotFoundException 적용
- springdoc 버전 2.3.0 -> 2.8.9 업그레이드

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>